trace fixed. Async calls
